added CSS formatting to tack/village/wizard html files via adding relevant class attributes

--- a/village.html
+++ b/village.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -38,102 +40,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Bigger Radius</th>
-                    <th>Jungle Drums</th>
-                    <th>Primary Mentoring</th>
-                    <th>Primary Academy</th>
-                    <th>Primary Expertise</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$400</td>
-                    <td>$1,500</td>
-                    <td>$800</td>
-                    <td>$2,500</td>
-                    <td>$25,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Bigger Radius</th>
+                        <th class="top_row">Jungle Drums</th>
+                        <th class="top_row">Primary Mentoring</th>
+                        <th class="top_row">Primary Academy</th>
+                        <th class="top_row">Primary Expertise</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$400</td>
+                        <td>$1,500</td>
+                        <td>$800</td>
+                        <td>$2,500</td>
+                        <td>$25,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Regrow Blocker</th>
+                        <th class="top_row">Radar Scanner</th>
+                        <th class="top_row">Monkey Intelligence Bureau</th>
+                        <th class="top_row">Call to Arms</th>
+                        <th class="top_row">Homeland Defense</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$250</td>
+                        <td>$2,000</td>
+                        <td>$7,500</td>
+                        <td>$20,000</td>
+                        <td>$40,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Regrow Blocker</th>
-                    <th>Radar Scanner</th>
-                    <th>Monkey Intelligence Bureau</th>
-                    <th>Call to Arms</th>
-                    <th>Homeland Defense</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$250</td>
-                    <td>$2,000</td>
-                    <td>$7,500</td>
-                    <td>$20,000</td>
-                    <td>$40,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Monkey Business</th>
-                    <th>Monkey Commerce</th>
-                    <th>Monkey Town</th>
-                    <th>Monkey City</th>
-                    <th>Monkeyopolis</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$500</td>
-                    <td>$500</td>
-                    <td>$10,000</td>
-                    <td>$3,000</td>
-                    <td>$5,000/Banana Farm in radius</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Monkey Business</th>
+                        <th class="top_row">Monkey Commerce</th>
+                        <th class="top_row">Monkey Town</th>
+                        <th class="top_row">Monkey City</th>
+                        <th class="top_row">Monkeyopolis</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$500</td>
+                        <td>$500</td>
+                        <td>$10,000</td>
+                        <td>$3,000</td>
+                        <td>$5,000/Banana Farm in radius</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="support tower_heading">
