--- a/wizard.html
+++ b/wizard.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -58,102 +60,100 @@
             </tbody>
         </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Guided Magic</th>
-                    <th>Arcane Blast</th>
-                    <th>Arcane Mastery</th>
-                    <th>Arcane Spikes</th>
-                    <th>Archmage</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$175</td>
-                    <td>$450</td>
-                    <td>$1,450</td>
-                    <td>$10,000</td>
-                    <td>$32,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Guided Magic</th>
+                        <th class="top_row">Arcane Blast</th>
+                        <th class="top_row">Arcane Mastery</th>
+                        <th class="top_row">Arcane Spikes</th>
+                        <th class="top_row">Archmage</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$175</td>
+                        <td>$450</td>
+                        <td>$1,450</td>
+                        <td>$10,000</td>
+                        <td>$32,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Fireball</th>
+                        <th class="top_row">Wall of Fire</th>
+                        <th class="top_row">Dragon's Breath</th>
+                        <th class="top_row">Summon Phoenix</th>
+                        <th class="top_row">Wizard Lord Phoenix</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$300</td>
+                        <td>$800</td>
+                        <td>$3,300</td>
+                        <td>$6,000</td>
+                        <td>$50,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Fireball</th>
-                    <th>Wall of Fire</th>
-                    <th>Dragon's Breath</th>
-                    <th>Summon Phoenix</th>
-                    <th>Wizard Lord Phoenix</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$300</td>
-                    <td>$800</td>
-                    <td>$3,300</td>
-                    <td>$6,000</td>
-                    <td>$50,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Intense Magic</th>
-                    <th>Monkey Sense</th>
-                    <th>Shimmer</th>
-                    <th>Necromancer: Unpopped Army</th>
-                    <th>Prince of Darkness</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$300</td>
-                    <td>$300</td>
-                    <td>$1,500</td>
-                    <td>$2,800</td>
-                    <td>$26,500</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Intense Magic</th>
+                        <th class="top_row">Monkey Sense</th>
+                        <th class="top_row">Shimmer</th>
+                        <th class="top_row">Necromancer: Unpopped Army</th>
+                        <th class="top_row">Prince of Darkness</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$300</td>
+                        <td>$300</td>
+                        <td>$1,500</td>
+                        <td>$2,800</td>
+                        <td>$26,500</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="magic tower_heading">
