--- a/tack.html
+++ b/tack.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -58,102 +60,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Faster Shooting</th>
-                    <th>Even Faster Shooting</th>
-                    <th>Hot Shots</th>
-                    <th>Ring of Fire</th>
-                    <th>Inferno Ring</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$150</td>
-                    <td>$300</td>
-                    <td>$650</td>
-                    <td>$3,500</td>
-                    <td>$45,500</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Faster Shooting</th>
+                        <th class="top_row">Even Faster Shooting</th>
+                        <th class="top_row">Hot Shots</th>
+                        <th class="top_row">Ring of Fire</th>
+                        <th class="top_row">Inferno Ring</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$150</td>
+                        <td>$300</td>
+                        <td>$650</td>
+                        <td>$3,500</td>
+                        <td>$45,500</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Long Range Tacks</th>
+                        <th class="top_row">Super Range Tacks</th>
+                        <th class="top_row">Blade Shooter</th>
+                        <th class="top_row">Blade Maelstrom</th>
+                        <th class="top_row">Super Maelstrom</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$100</td>
+                        <td>$225</td>
+                        <td>$550</td>
+                        <td>$2,700</td>
+                        <td>$15,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Long Range Tacks</th>
-                    <th>Super Range Tacks</th>
-                    <th>Blade Shooter</th>
-                    <th>Blade Maelstrom</th>
-                    <th>Super Maelstrom</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$100</td>
-                    <td>$225</td>
-                    <td>$550</td>
-                    <td>$2,700</td>
-                    <td>$15,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>More Tacks</th>
-                    <th>Even More Tacks</th>
-                    <th>Tack Sprayer</th>
-                    <th>Overdrive</th>
-                    <th>The Tack Zone</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$110</td>
-                    <td>$110</td>
-                    <td>$450</td>
-                    <td>$3,200</td>
-                    <td>$20,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">More Tacks</th>
+                        <th class="top_row">Even More Tacks</th>
+                        <th class="top_row">Tack Sprayer</th>
+                        <th class="top_row">Overdrive</th>
+                        <th class="top_row">The Tack Zone</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$110</td>
+                        <td>$110</td>
+                        <td>$450</td>
+                        <td>$3,200</td>
+                        <td>$20,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="primary tower_heading">
