Added GitHub startup link to about.html

--- a/about.html
+++ b/about.html
@@ -43,6 +43,9 @@
 
     <footer class="container-fluid">
         <span>Created by Parker Remund</span>
+        <div>
+            <a href="https://github.com/DrDonut25/startup">Startup GitHub Link</a>
+        </div>
     </footer>
 </body>
 </html>
