--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
 
     <footer class="container-fluid">
         <a href="about.html">About BTD6</h1>
+        <div>
+            <a href="https://github.com/DrDonut25/startup">Startup GitHub Link</a>
+        </div>
     </footer>
 </body>
 </html>
