Added/styled new div for websocket placeholder for all tower html files

--- a/bomb.html
+++ b/bomb.html
@@ -64,6 +64,15 @@
             </tbody>
         </table>
         
+        <div class="websocket">
+            <ul>
+                <li style="color: #f8f9fa">You selected "Faster Reload"</li>
+                <li style="color: #f8f9fa">You selected "Missile Launcher"</li>
+                <li style="color: #f8f9fa">You selected "Extra Range"</li>
+                <li style="color:lightcoral">Error: you cannot select upgrades from more than two paths at once</li>
+            </ul>
+        </div>
+
         <div class="upgrade_table_container">
             <table class="upgrade_table">
                 <thead>
