--- a/ace.html
+++ b/ace.html
@@ -60,6 +60,15 @@
             </tbody>
         </table>
         
+        <div class="websocket">
+            <ul>
+                <li style="color: #f8f9fa">You selected "Rapid Fire"</li>
+                <li style="color: #f8f9fa">You selected "Lots More Darts"</li>
+                <li style="color: #f8f9fa">You selected "Sharper Darts"</li>
+                <li style="color:lightcoral">Error: you cannot select upgrades from more than two paths at once</li>
+            </ul>
+        </div>
+        
         <div class="upgrade_table_container">
             <table class="upgrade_table">
                 <thead>
