--- a/banana.html
+++ b/banana.html
@@ -48,6 +48,15 @@
             </tbody>
         </table>
         
+        <div class="websocket">
+            <ul>
+                <li style="color: #f8f9fa">You selected "Increased Production"</li>
+                <li style="color: #f8f9fa">You selected "Greater Production"</li>
+                <li style="color: #f8f9fa">You selected "Long Life Bananas"</li>
+                <li style="color:lightcoral">Error: you cannot select upgrades from more than two paths at once</li>
+            </ul>
+        </div>
+        
         <div class="upgrade_table_container">
             <table class="upgrade_table">
                 <thead>
