--- a/beasthandler.html
+++ b/beasthandler.html
@@ -64,6 +64,15 @@
             </tbody>
         </table>
         
+        <div class="websocket">
+            <ul>
+                <li style="color: #f8f9fa">You selected "Piranha"</li>
+                <li style="color: #f8f9fa">You selected "Barracuda"</li>
+                <li style="color: #f8f9fa">You selected "Microraptor"</li>
+                <li style="color:lightcoral">Error: you cannot select upgrades from more than two paths at once</li>
+            </ul>
+        </div>
+
         <div class="upgrade_table_container">
             <table class="upgrade_table">
                 <thead>
