--- a/engineer.html
+++ b/engineer.html
@@ -60,6 +60,15 @@
             </tbody>
         </table>
         
+        <div class="websocket">
+            <ul>
+                <li style="color: #f8f9fa">You selected "Oversize Nails"</li>
+                <li style="color: #f8f9fa">You selected "Larger Service Area"</li>
+                <li style="color: #f8f9fa">You selected "Pin"</li>
+                <li style="color:lightcoral">Error: you cannot select upgrades from more than two paths at once</li>
+            </ul>
+        </div>
+
         <div class="upgrade_table_container">
             <table class="upgrade_table">
                 <thead>
