--- a/glue.html
+++ b/glue.html
@@ -72,6 +72,15 @@
             </tbody>
         </table>
         
+        <div class="websocket">
+            <ul>
+                <li style="color: #f8f9fa">You selected "Glue Soak"</li>
+                <li style="color: #f8f9fa">You selected "Corrosive Glue"</li>
+                <li style="color: #f8f9fa">You selected "Bigger Globs"</li>
+                <li style="color:lightcoral">Error: you cannot select upgrades from more than two paths at once</li>
+            </ul>
+        </div>
+
         <div class="upgrade_table_container">
             <table class="upgrade_table">
                 <thead>
