--- a/ice.html
+++ b/ice.html
@@ -68,6 +68,15 @@
             </tbody>
         </table>
         
+        <div class="websocket">
+            <ul>
+                <li style="color: #f8f9fa">You selected "Permafrost"</li>
+                <li style="color: #f8f9fa">You selected "Cold Snap"</li>
+                <li style="color: #f8f9fa">You selected "Larger Radius"</li>
+                <li style="color:lightcoral">Error: you cannot select upgrades from more than two paths at once</li>
+            </ul>
+        </div>
+
         <div class="upgrade_table_container">
             <table class="upgrade_table">
                 <thead>
