--- a/tack.html
+++ b/tack.html
@@ -60,6 +60,15 @@
             </tbody>
         </table>
         
+        <div class="websocket">
+            <ul>
+                <li style="color: #f8f9fa">You selected "Faster Shooting"</li>
+                <li style="color: #f8f9fa">You selected "Even Faster Shooting"</li>
+                <li style="color: #f8f9fa">You selected "More Tacks"</li>
+                <li style="color:lightcoral">Error: you cannot select upgrades from more than two paths at once</li>
+            </ul>
+        </div>
+
         <div class="upgrade_table_container">
             <table class="upgrade_table">
                 <thead>
