--- a/village.html
+++ b/village.html
@@ -40,6 +40,15 @@
             </tbody>
         </table>
         
+        <div class="websocket">
+            <ul>
+                <li style="color: #f8f9fa">You selected "Bigger Radius"</li>
+                <li style="color: #f8f9fa">You selected "Regrow Blocker"</li>
+                <li style="color: #f8f9fa">You selected "Radar Scanner"</li>
+                <li style="color:lightcoral">Error: you cannot select upgrades from more than two paths at once</li>
+            </ul>
+        </div>
+
         <div class="upgrade_table_container">
             <table class="upgrade_table">
                 <thead>
