Added my name to index.html

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </main>
 
     <footer class="container-fluid">
-        <a href="about.html">About BTD6</h1>
+        <a href="about.html">About BTD6 (created by Parker Remund)</h1>
         <div>
             <a href="https://github.com/DrDonut25/startup">Startup GitHub Link</a>
         </div>
